# StellarSalvage

./: CMakeLists.txt  README.md  TODO  main.cpp
backends/sdl2/: Details.hpp  Engine.cpp  SDLDetails.cpp  SDLRenderer.cpp  SDLRenderer.hpp
backends/sfml/: Details.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp
docs/: GDD.md
include/: Engine.hpp  Exception.hpp  Renderer.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt
